# doodle-rs

./: .travis.yml  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
doodle/: Cargo.toml  README.md
doodle/src/: lib.rs  traits.rs
doodle_derive/: Cargo.toml  README.md
doodle_derive/src/: lib.rs
doodle_example/: Cargo.toml
doodle_example/src/: main.rs
schema/: Cargo.toml
schema/src/: lib.rs
schema_derive/: Cargo.toml
schema_example/: Cargo.toml
schema_example/src/: main.rs
