[package]
name = "doodle"
version = "0.1.1"
authors = ["Daniel Kiss <littlesnorrboy@gmail.com>"]
edition = "2018"
include = [
    "**/*.rs",
    "Cargo.toml",
    "LICENCE",
    "README.md",
]
readme = "README.md"
license = "MIT"
description = "Doodle is a Schema documentation helper library"
homepage = "https://github.com/snorrwe/doodle-rs"
repository = "https://github.com/snorrwe/doodle-rs"
documentation = "https://snorrwe.github.io/doodle-rs/doodle/"
keywords = ["serialization"]

[dependencies]
serde_json = "1.0"
doodle_derive = { version="0.1.1", path = "../doodle_derive", optional = true }

[features]
derive = ["doodle_derive"]
