[package]
name = "doodle_derive"
version = "0.1.0"
authors = ["Daniel Kiss <littlesnorrboy@gmail.com>"]
edition = "2018"
include = [
    "**/*.rs",
    "Cargo.toml",
    "LICENCE",
    "README.md",
]
readme = "README.md"
license = "MIT"
description = "Implementation of #[derive(Schema)]"
homepage = "https://github.com/snorrwe/doodle-rs"
repository = "https://github.com/snorrwe/doodle-rs"
documentation = "https://github.com/snorrwe/doodle-rs"
keywords = ["serialization"]

[lib]
name = "doodle_derive"
proc-macro = true

[dependencies]
syn = "0.15"
quote = "0.6"
