[package]
name = "doodle_derive"
version = "0.2.0"
authors = ["Daniel Kiss <littlesnorrboy@gmail.com>"]
edition = "2018"
include = [
    "**/*.rs",
    "Cargo.toml",
    "LICENCE",
    "README.md",
]
readme = "README.md"
license = "MIT"
description = "Implementation of #[derive(Schema)]"
homepage = "https://github.com/snorrwe/doodle-rs"
repository = "https://github.com/snorrwe/doodle-rs"
documentation = "https://snorrwe.github.io/doodle-rs/doodle_derive/"
keywords = ["serialization"]

[lib]
name = "doodle_derive"
proc-macro = true

[dependencies]
syn = "0.15"
quote = "0.6"
proc-macro2 = "0.4.27"
